# AI-Playground

./: .gitignore  CMakeLists.txt  README.MD  rebuild.bat
AI/: CMakeLists.txt
AI/AI/Private/: Academy.cpp  Agent.cpp  Environment.cpp  InputGatherer.cpp  Outputs.cpp
AI/AI/Private/NN/: FeedForwardNN.cpp
AI/AI/Private/Trainer/: PPOTrainer.cpp
AI/AI/Public/: Academy.h  Agent.h  Environment.h  InputGatherer.h  Outputs.h
AI/AI/Public/NN/: FeedForwardNN.h
AI/AI/Public/Trainer/: PPOTrainer.h  Trainer.h
Api/: CMakeLists.txt
Api/Api/Private/: GameHost.cpp
Api/Api/Private/Camera/: Camera.cpp
Api/Api/Private/Component/Basic/Physics/: InstancedMeshCollider.cpp  MeshCollider.cpp
Api/Api/Private/Component/Basic/Render/3D/: InstancedMeshRenderer.cpp  MeshRenderer.cpp
Api/Api/Private/GameObject/: GameObject.cpp  UIObject.cpp
Api/Api/Private/Input/: Input.cpp
Api/Api/Private/Light/Shadow/: ShadowProcessor.cpp
Api/Api/Private/Scene/: Scene.cpp
Api/Api/Private/Shader/Basic/: DefaultShaderInstanced.cpp
Api/Api/Public/: GameHost.h
Api/Api/Public/Camera/: Camera.h
Api/Api/Public/Component/Basic/Render/2D/: SpriteRenderer.h
Api/Api/Public/Component/Basic/Render/3D/: MeshRenderer.h
Api/Api/Public/EventSystem/: EventSystem.h
Api/Api/Public/GameObject/: UIObject.h
Api/Api/Public/Scene/: Scene.h
Api/Api/Public/Util/Font/: FontLoader.h
Api/Api/Public/Util/Sound/: SoundManager.cpp
ApiDefaultImpl/: CMakeLists.txt
App/: App.rc  CMakeLists.txt
Core/: CMakeLists.txt
Core/Core/Private/Core/: Moteur.cpp  MoteurWindows.cpp  dispositifD3D11.cpp
Core/Core/Public/Core/: Moteur.h
Game/: CMakeLists.txt
Game/Game/Private/: Game.cpp
Game/Game/Private/Experiments/1_GoToGoal/: GoToGoalAgent.cpp  GoToGoalEnvironment.cpp  GoToGoalScene.cpp
Game/Game/Private/Scenes/: EmptyScene.cpp
Game/Game/Public/: Game.h
Game/Game/Public/Experiments/1_GoToGoal/: GoToGoalAgent.h  GoToGoalEnvironment.h  GoToGoalScene.h
Game/Game/Public/Scenes/: EmptyScene.h
